tests/mm0_mmu/fail/bad-sort2143.mm0
-- bad modifier order
strict pure free provable sort s2143;